@@ -15,6 +15,7 @@ Diane Holt
 Andrew M. Inggs
 C. Brian Jones
 Takashi Okamoto
+Daniel Resare
 Kumaran Santhanam
 Gregory Steuck
 Andrew G. Tereschenko
